Fix T78151: Vertex/Edge Slide after enabling 'Even' doesn't cancel properly

Problem introduced by rBcf42721f